tests/stage3/semantic_implement_param_count_mismatch.err
type error
line: 10
interface method parameter count mismatch
expected: 2
got: 1
