tests/stage3/semantic_implement_param_count_mismatch.imp
interface Score {
    function add(self, delta: i32) -> i32
}

struct Counter {
    value: i32
}

implement Score for Counter {
    function add(self) -> i32 => self.value
}

function main() {
    print(0)
}
